--- a/package.json
+++ b/package.json
@@ -17,10 +17,10 @@
     "@mui/styled-engine-sc": "^5.12.0",
     "bcrypt": "^5.1.0",
     "meteor-node-stubs": "^1.2.5",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-router-dom": "^6.14.2",
-    "styled-components": "^6.0.7"
+    "styled-components": "^5.3.1"
   },
   "meteor": {
     "mainModule": {
@@ -28,5 +28,8 @@
       "server": "server/main.js"
     },
     "testModule": "tests/main.js"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.22.10"
   }
 }
