--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/icons-material": "^5.14.3",
     "@mui/material": "^5.14.5",
     "@mui/styled-engine-sc": "^5.12.0",
+    "@mui/styles": "^5.14.6",
     "bcrypt": "^5.1.0",
     "meteor-node-stubs": "^1.2.5",
     "react": "^17.0.2",
